CMAKE_MINIMUM_REQUIRED(VERSION 2.8.0)

PROJECT(Pseudoform)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake-extras/;${CMAKE_MODULE_PATH}")
SET(Boost_USE_MULTITHREADED ON)
FIND_PACKAGE(Protobuf REQUIRED)
FIND_PACKAGE(OIS REQUIRED)
FIND_PACKAGE(OGRE REQUIRED)
FIND_PACKAGE(Boost COMPONENTS filesystem system signals REQUIRED)

ADD_SUBDIRECTORY(deps/)
ADD_SUBDIRECTORY(src/)

